# AgentLaboratory

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agentlaboratory/: common_imports.py  inference.py  laboratory_workflow.py  main.py  mlesolver.py  papersolver.py  utils.py
agentlaboratory/agents/: __init__.py  base.py  mlengineer.py  phdstudent.py  postdoc.py  professor.py  reviewers.py  swengineer.py
agentlaboratory/tools/: __init__.py  arxiv_search.py  code_executor.py  hf_search.py  semantic_scholar.py
docs/: AGENTS.md
tests/: conftest.py  test_base.py  test_mlengineer.py  test_phdstudent.py  test_postdoc.py  test_professor.py
