[tool.poetry]
name = "agentlaboratory"
version = "0.1.0"
description = "A framework for running research experiments using AI agents"
authors = ["Agent Laboratory Team"]
readme = "README.md"
packages = [{include = "agentlaboratory"}]

[tool.poetry.scripts]
laboratory = "agentlaboratory.main:main"

[tool.poetry.dependencies]
python = "3.11.10"
tiktoken = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
datasets = "*"
joblib = "*"
openai = "*"
anthropic = "^0.42.0"
psutil = "^6.1.1"
semanticscholar = "^0.9.0"
arxiv = "^2.1.3"
pypdf = "^5.1.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
transformers = "^4.48.0"
nltk = "^3.9.1"
spacy = "^3.8.3"
sacremoses = "^0.1.1"
diffusers = "^0.32.1"
huggingface-hub = "^0.27.1"
scipy = "^1.15.1"
statsmodels = "^0.14.4"
pillow = "^11.1.0"
imageio = "^2.36.1"
scikit-image = "^0.25.0"
pydantic = "^2.10.5"
requests = "^2.32.3"
aiohttp = "^3.11.11"
h5py = "^3.12.1"
torch= "^2.2.2"
tensorflow= "^2.16.2"
accelerate= "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
